# townhall-panel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  docker-compose.yml  pyproject.toml  test_document.sh
app/: config.py  main.py
app/admin/: __init__.py  admin_app.py  auth.py
app/admin/actions/: __init__.py  document_actions.py
app/admin/providers/: __init__.py  base_motor_model_view.py
app/admin/views/: __init__.py  department_view.py  document_history_view.py  document_view.py  notification_view.py  user_view.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  dashboard.py  departments.py  documents.py  files.py  notifications.py  users.py
app/core/: gridfs_service.py  permissions.py  security.py
app/db/: mongodb.py
app/db/migrations/: create_indexes.py  seed_data.py
app/db/repositories/: base.py  department_repository.py  document_history_repository.py  document_repository.py  notification_repository.py  user_repository.py
app/schemas/: common.py  department.py  document.py  document_history.py  notification.py  user.py
app/services/: email_service.py  notification_service.py
app/utils/: constants.py
